# AutoPerformance

./: .gitignore  README
data/Examples/Downstream/: 2012-03-19_19:26:07_Tcp.csv  Summary_Tcp.csv  Summary_Udp.csv
data/Examples/Upstream/: 2012-03-19_19:36:50_Tcp.csv  Summary_Tcp.csv  Summary_Udp.csv
engine/: .gitignore  .project  .pydevproject  AutoPerformanceClient.py  AutoPerformanceDaemon.py  AutoPerformanceEngine.py  AutoPerformanceServer.py  AutoPerformanceTimer.py  Main.py  README  autoperf.py  client.conf  configure  server.conf
engine/.libs/: lt-thrulay  lt-thrulayd
engine/.metadata/.plugins/com.python.pydev.analysis/python_v1_3tswbhuj9gc4kibexhrzgzdx/: python.pydevsysteminfo
engine/.metadata/.plugins/org.eclipse.core.resources/.projects/AutoPerformance/.indexes/: history.index
engine/.metadata/.plugins/org.eclipse.core.resources/.projects/AutoPerformance/com.python.pydev.analysis/: 0.v1_projectinfodelta  1.v1_projectinfodelta  AdditionalProjectInterpreterInfo.pydevinfo
engine/.metadata/.plugins/org.eclipse.core.resources/.projects/AutoPerformance/org.python.pydev/v1_astmanager/: modulesKeys  pythonpath
engine/.metadata/.plugins/org.eclipse.core.resources/.root/: 5.tree
engine/.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/: properties.index
engine/.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
engine/.metadata/.plugins/org.eclipse.debug.core/.launches/: AutoPerformance AutoPerformanceEngine.py.launch
engine/.metadata/.plugins/org.eclipse.debug.ui/: launchConfigurationHistory.xml
engine/.metadata/.plugins/org.eclipse.equinox.p2.ui/: dialog_settings.xml
engine/.metadata/.plugins/org.eclipse.ui.workbench/: workbench.xml  workingsets.xml
engine/.metadata/.plugins/org.python.pydev/v1_3tswbhuj9gc4kibexhrzgzdx/: modulesKeys  pythonpath
engine/thrulay/: .gitignore  Makefile  Makefile.am  Makefile.in  config.h  config.h.in  configure.ac
engine/thrulay-0.9/: .gitignore  ChangeLog  README  TODO  config.status  configure  libtool  thrulay.spec  thrulay.spec.in
engine/thrulay-0.9/doc/: Makefile.in  RELEASE-0.7  RELEASE-0.8  thrulay-index.html  thrulay.1  thrulayd.8
engine/thrulay-0.9/src/: Makefile  Makefile.am  Makefile.in  assertd.c  client.c  client.h  rcs.h  reporting.c  reporting.h  server.h  thrulay.c  thrulay.h  util.c
engine/thrulay-0.9/src/.deps/: assertd.Plo  thrulay.Po  thrulayd.Po  util.Plo
engine/thrulay-0.9/src/.libs/: libthrulay.la  thrulay
engine/thrulay/doc/: Makefile  Makefile.am  thrulay-protocol.txt
engine/thrulay/src/: assertd.h  libthrulay.la  server.c  thrulay  thrulayd  thrulayd.c  thrulayd.h  util.h
engine/thrulay/src/.deps/: client.Plo  reporting.Plo  server.Plo
engine/thrulay/src/.libs/: libthrulay.lai  libthrulay.so.0  libthrulay.so.0.0.0  thrulayd
grapher/: .pydevproject  grapher.py
grapher/AutoPerformanceGrapherPackage/: AutoPerformanceGrapher.py  AutoPerformanceGrapher_CLI.py
